# AudioConvolutionStudio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Makefile  PROJECT_SHOWCASE.md  README.md  WEBSITE_CONTENT.md  WEBSITE_INTEGRATION.md  cli_processor  cli_processor.cpp  cmake_install.cmake  firebase.json  index.html  install.sh  package-lock.json  package.json  server.js  start-dev.js  tailwind.config.js  vite.config.ts
assets/: index-137f81b2.js  index-137f81b2.js.map  index-5e599f27.css  index-bcf04f4f.js  index-bcf04f4f.js.map
electron/: main.js  preload.js
src/: App.tsx  index.css
src/components/: AudioFileBrowser.tsx  AudioVisualizer.tsx  ImpulseResponseBrowser.tsx  MixControls.tsx  PreviewControls.tsx  ProcessingStatus.tsx
